# spotify-api-plusplus

./: .gitignore  CMakeLists.txt
src/: SpotifyAPI.cpp  SpotifyAPI.h  spotify.cpp  spotify.h
src/models/: Album.cpp  Album.h  AlbumSimple.cpp  AlbumSimple.h  Artist.cpp  Artist.h  ArtistSimple.cpp  ArtistSimple.h  AudioFeatures.cpp  AudioFeatures.h  Category.cpp  Category.h  Context.cpp  Context.h  Copyright.cpp  Copyright.h  CurrentlyPlayingContext.h  CurrentlyPlayingTrack.h  Cursor.cpp  Cursor.h  CursorPager.h  Device.h  Error.cpp  Error.h  Followers.cpp  Followers.h  Image.cpp  Image.h  Pager.h  PlayHistoryObject.cpp  PlayHistoryObject.h  Playlist.cpp  Playlist.h  PlaylistSimple.cpp  PlaylistSimple.h  PlaylistTrack.cpp  PlaylistTrack.h  Recommendations.cpp  Recommendations.h  RecommendationsSeed.cpp  (+73 more)
src/utils/: CurlException.h  CurlUtils.h  SpotifyException.h  curl_exception.h  curl_utils.h
tests/: TestEndpoints.cpp  test.cpp  test_endpoints.cpp
